opam-version: "1.2"
name: "bap-frontend"
version: "master"
maintainer: "Ivan Gotovchits <ivg@ieee.org>"
authors: "BAP Team"
homepage: "https://github.com/BinaryAnalysisPlatform/bap/"
bug-reports: "https://github.com/BinaryAnalysisPlatform/bap/issues"
dev-repo: "git://github.com/BinaryAnalysisPlatform/bap/"
license: "MIT"
build: [
  ["./configure"
                 "--prefix=%{prefix}%"
                 "--mandir=%{man}%"
                 "--disable-frontend"
                 "--disable-mc"
                 "--enable-byteweight"
  ]
  [make]
]

install: [
  [make "install"]
]

remove: [
  ["rm" "-f" "%{man}%/man1/bap-byteweight.1"]
  ["rm" "-f" "%{bin}%/bap-byteweight"]
]

depends: [
    "bap-std"
    "cmdliner" {>= "0.9.6"}
    "fileutils"
    "oasis" {build & >= "0.4.0"}
    "re"
    "curl"
]

available: [ocaml-version >= "4.02.0"]
