opam-version: "1.2"
name: "bap"
version: "master"
maintainer: "Ivan Gotovchits <ivg@ieee.org>"
authors: "BAP Team"
homepage: "https://github.com/BinaryAnalysisPlatform/bap/"
bug-reports: "https://github.com/BinaryAnalysisPlatform/bap/issues"
dev-repo: "git://github.com/BinaryAnalysisPlatform/bap/"
license: "MIT"

depends: [
    "bap-std"
    "bap-frontend"
    "bap-mc"
    "bap-byteweight"
]

available: [ocaml-version >= "4.02.0"]
