opam-version: "1.2"
name: "bap-std"
version: "master"
maintainer: "Ivan Gotovchits <ivg@ieee.org>"
authors: "BAP Team"
homepage: "https://github.com/BinaryAnalysisPlatform/bap/"
bug-reports: "https://github.com/BinaryAnalysisPlatform/bap/issues"
dev-repo: "git://github.com/BinaryAnalysisPlatform/bap/"
license: "MIT"
build: [
  ["./configure"
                 "--prefix=%{prefix}%"
                 "--with-cxx=`which clang++`"
                 "--mandir=%{man}%"
                 "--disable-frontend"
                 "--disable-mc"
                 "--disable-byteweight"
                 "--enable-tests"
                 ]
  [make]
]

install: [
  [make "install"]
  [make "test"]
]

remove: [
  ["ocamlfind" "remove" "bap"]
  ["rm" "-f" "%{bin}%/bapbuild"]
  ["rm" "-f" "%{bin}%/baptop"]
]

depends: [
    "camlzip"
    "core_kernel" {>= "112.17.0" & < "112.35.0"}
    "fileutils"
    "oasis" {build & >= "0.4.0"}
    "ounit" {build}
    "ocamlgraph"
    "uri"
    "zarith"
    "uuidm"
]

depexts: [
    [["ubuntu"] [
        "libgmp-dev"
        "libzip-dev"
        "llvm-3.4-dev"
        "clang"
        "llvm"
        "m4"
     ]]
     [["osx" "macports"] [
        "gmp"
        "llvm-3.4"
        "libzip"
     ]
    ]
]

available: [ocaml-version >= "4.02.0"]
