opam-version: "1.2"
name: "bap-tracedump"
version: "master"
maintainer: "Ivan Gotovchits <ivg@ieee.org>"
authors: "BAP Team"
homepage: "https://github.com/BinaryAnalysisPlatform/bap/"
bug-reports: "https://github.com/BinaryAnalysisPlatform/bap/issues"
dev-repo: "git://github.com/BinaryAnalysisPlatform/bap/"
license: "MIT"
build: [
  ["./configure"
                 "--prefix=%{prefix}%"
                 "--mandir=%{man}%"
                 "--disable-frontend"
                 "--enable-tracedump"
                 "--disable-byteweight"
  ]
  [make]
]

install: [
  [make "install"]
]

remove: [
  ["rm" "-f" "%{man}%/man1/bap-tracedump.1"]
  ["rm" "-f" "%{bin}%/bap-tracedump"]
]

depends: [
    "bap-std"
    "bap-traces"
    "cmdliner" {>= "0.9.6"}
    "oasis" {build & >= "0.4.0"}
]

available: [ocaml-version >= "4.02.0"]
